--- a/demo/index.html
+++ b/demo/index.html
@@ -4,11 +4,13 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Push Notification</title>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-		
-
+	
+	<h1>Subscribe to push notification</h1>
+	<button id="subscribe">Subscribe</button>
 
 	<script src="app.js"></script>
 	<script src="serviceWorker.js"></script>
